# holoinjector

./: .clang-format  CMakeLists.txt  LICENSE  README.md  cloneDeps.sh
cmake/: FindFreeImage.cmake
src/: a.out  config.cpp  config.hpp  context.cpp  context.hpp  diagnostics.cpp  diagnostics.hpp  dispatcher.cpp  dispatcher.hpp  framebuffer_tracker.cpp  framebuffer_tracker.hpp  imgui_adapter.cpp  imgui_adapter.hpp  legacy_tracker.cpp  legacy_tracker.hpp  logger.cpp  logger.hpp  main.cpp  opengl_redirector_base.cpp  opengl_redirector_base.hpp  opengl_redirector_impl_macros.hpp  opengl_utils.cpp  pipeline_injector.cpp  pipeline_injector.hpp  program_metadata.cpp  projection_estimator.cpp  projection_estimator.hpp  redirector_base.hpp  repeater.  repeater.cpp  repeater.hpp  shader_dumper.cpp  shader_dumper.hpp  shader_inspector.cpp  shader_inspector.hpp  shader_manager.cpp  shader_manager.hpp  shader_parser.cpp  shader_parser.hpp  startup.cpp  (+15 more)
src/hooking/: opengl_redirector_base.cpp  opengl_redirector_base.hpp  opengl_redirector_impl_macros.hpp  redirector_base.hpp  symbol_redirection.hpp
src/managers/: draw_manager.cpp  draw_manager.hpp  framebuffer_manager.cpp  framebuffer_manager.hpp  shader_manager.cpp  shader_manager.hpp  ui_manager.cpp  ui_manager.hpp
src/paralax/: mapping.cpp  mapping.hpp
src/pipeline/: camera_parameters.cpp  camera_parameters.hpp  output_fbo.cpp  output_fbo.hpp  pipeline_injector.cpp  pipeline_injector.hpp  program_metadata.cpp  program_metadata.hpp  projection_estimator.cpp  projection_estimator.hpp  shader_inspector.cpp  shader_inspector.hpp  shader_parser.cpp  shader_parser.hpp  shader_profile.cpp  shader_profile.hpp  viewport_area.cpp  viewport_area.hpp  virtual_cameras.cpp  virtual_cameras.hpp
src/trackers/: framebuffer_tracker.cpp  framebuffer_tracker.hpp  legacy_tracker.cpp  legacy_tracker.hpp  renderbuffer_tracker.cpp  renderbuffer_tracker.hpp  shader_manager.cpp  shader_manager.hpp  shader_tracker.cpp  shader_tracker.hpp  texture_tracker.cpp  texture_tracker.hpp  uniform_block_tracing.cpp  uniform_block_tracing.hpp
src/ui/: inspector_widget.cpp  inspector_widget.hpp  settings_widget.cpp  settings_widget.hpp  x11_sniffer.cpp  x11_sniffer.hpp
src/utils/: context_tracker.hpp  enviroment.cpp  enviroment.hpp  globject.hpp  glsl_preprocess.cpp  glsl_preprocess.hpp  opengl_debug.cpp  opengl_debug.hpp  opengl_objects.cpp  opengl_objects.hpp  opengl_raii.cpp  opengl_raii.hpp  opengl_state.cpp  opengl_state.hpp  opengl_utils.cpp  opengl_utils.hpp  string_utils.cpp  string_utils.hpp
tests/opengl/: opengl_test_context.cpp  opengl_test_context.hpp  output_fbo_test.cpp
tests/system/: system.sh  testLearnOpenGL.sh  testProgram.sh
tests/unittests/: framebuffer_tracker_test.cpp  legacy_tracker_test.cpp  pipeline_injector_test.cpp  projection_estimator_test.cpp  shader_inspector_test.cpp  shader_manager_test.cpp  shader_parser_test.cpp  uniform_block_tracing_test.cpp  viewport_area_test.cpp  virtual_cameras_test.cpp
tests/unittests/pipeline/: pipeline_injector_test.cpp  projection_estimator_test.cpp  shader_inspector_test.cpp  shader_manager_test.cpp  viewport_area_test.cpp  virtual_cameras_test.cpp
tests/unittests/trackers/: framebuffer_tracker_test.cpp  legacy_tracker_test.cpp  shader_tracker_test.cpp  uniform_block_tracing_test.cpp
tests/unittests/utils/: enviroment_test.cpp  glsl_preprocess_test.cpp  opengl_utils_test.cpp  string_utils_test.cpp
